@@ -1,7 +1,9 @@
 package io.kestra.plugin.kafka;
 
+
 import com.google.common.collect.ImmutableMap;
 import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.property.Property;
 import io.kestra.core.queues.QueueFactoryInterface;
 import io.kestra.core.queues.QueueInterface;
 import io.kestra.core.repositories.LocalFlowRepositoryLoader;
@@ -65,7 +67,7 @@ class RealtimeTriggerTest {
                 AbstractScheduler scheduler = new JdbcScheduler(
                     this.applicationContext,
                     this.flowListenersService
-                );
+                )
             ) {
                 List<Execution> executionList = new CopyOnWriteArrayList<>();
 
@@ -112,11 +114,11 @@ class RealtimeTriggerTest {
         Produce task = Produce.builder()
             .id(RealtimeTriggerTest.class.getSimpleName())
             .type(Produce.class.getName())
-            .properties(Map.of("bootstrap.servers", this.bootstrap))
-            .serdeProperties(Map.of("schema.registry.url", this.registry))
-            .keySerializer(SerdeType.STRING)
-            .valueSerializer(SerdeType.STRING)
-            .topic("tu_stream")
+            .properties(Property.of(Map.of("bootstrap.servers", this.bootstrap)))
+            .serdeProperties(Property.of(Map.of("schema.registry.url", this.registry)))
+            .keySerializer(Property.of(SerdeType.STRING))
+            .valueSerializer(Property.of(SerdeType.STRING))
+            .topic(Property.of("tu_stream"))
             .from(List.of(
                 ImmutableMap.builder()
                     .put("key", "key1")
@@ -129,6 +131,6 @@ class RealtimeTriggerTest {
             ))
             .build();
 
-        task.run(TestsUtils.mockRunContext(runContextFactory, task, ImmutableMap.of()));
+        task.run(TestsUtils.mockRunContext(runContextFactory, task, Map.of()));
     }
 }
